# automobile-maintenance-library

./: .config  .replit  CMakeLists.txt  LOCAL_SETUP.md  README.md  TECHNICAL_OVERVIEW.md  WINDOWS_TROUBLESHOOTING.md  build_windows.bat  build_windows.ps1  demo_script.md  project_info.md  replit.md
attached_assets/: Pasted-Automobile-Maintenance-Library-Creation-Introduction-The-objective-of-this-project-is-to-design-an-1751430549284_1751430549286.txt
public/: app.js  index.html  style.css
src/: Automobile.cpp  Automobile.h  MaintenanceLibrary.cpp  MaintenanceLibrary.h  MaintenanceTask.cpp  MaintenanceTask.h  main.cpp
tests/: test_automobile.cpp  test_maintenance_library.cpp
